--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "dnd-core": "^7.0.2",
+    "immutability-helper": "^3.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
