--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "reactjs-popup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
